[package]
name = "cita-database"
version = "0.4.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"
description = "Database for CITA."
homepage = "https://github.com/citahub/cita-database"
repository = "https://github.com/citahub/cita-database"
license = "Apache-2.0"

[dependencies]
cita-logger = "0.1.1"
rocksdb = "0.20.0"

[dev-dependencies]
